tests/NormalTests/paczka1/small_fuzzy/26345489.err
Error in line 2: bueN6KvTk S246 92,54
Error in line 9: KYqniMcHZ S246 8,3
Error in line 10: KYqniMcHZ A960 84,3
